Have to set explicit focus to a page by clicking on it, after clicking Back. b=504450 r=josh